# celsusdjango

./: .gitignore  README.MD  celsus.env  django-q-captain-definition  docker-compose-other.yml  docker-compose.yml  licenses.txt  manage.py  pyproject.toml  requirements.txt  schema.yml
celsus/: admin.py  apps.py  factories.py  google_views.py  models.py  permissions.py  s3_sendfile_backend.py  serializers.py  tests.py  utils.py  validations.py  view_sets.py  views.py  worker_tasks.py
celsus/migrations/: 0001_initial.py  0002_experimenttype_remove_project_experiment_type_and_more.py  0006_author_project_alter_author_created_and_more.py  (+26 more)
celsusdjango/: asgi.py  consumers.py  routing.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  Dockerfile-djangoq
oldmigrations/: 0003_remove_author_project.py  0004_alter_differentialsamplecolumn_file_and_more.py  0005_alter_organism_created.py  0008_remove_differentialsamplecolumn_comparison_name_and_more.py  0010_alter_rawdata_value.py  0011_author_first_author_delete_firstauthor.py  0012_remove_author_first_author.py  0014_remove_comparison_file_file_comparison.py  0016_remove_rawdata_project_rawdata_file.py  0018_genenamemap_entry.py  0020_alter_differentialanalysisdata_comparison_and_more.py  0025_labgroup_project_lab_group.py  0028_alter_project_cell_type_alter_project_curtain_and_more.py  0030_alter_project_associated_authors_and_more.py  0031_curtain_file.py  0032_uniprotrecord_genenamemap_uniprot_record.py  0034_file_file_parameters.py  0035_remove_genenamemap_uniprot_record_and_more.py  0036_genenamemap_primary_uniprot_record.py  0037_projectsettings.py  0038_project_default_settings.py  0039_alter_projectsettings_data.py  0041_curtain_enable_curtain_owners_alter_curtain_link_id_and_more.py  0043_curtain_description.py  0044_socialplatform.py  0053_alter_collaborator_project_alter_curtain_project_and_more.py  0056_alter_curtain_curtain_type.py  0057_datafilterlist_category.py
utils/: migrateS3.py
