[tool.poetry]
name = "celsusdjango"
version = "0.1.0"
description = ""
authors = ["Toan Phung <toan.phungkhoiquoctoan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
django-filter = "^23.2"
djangorestframework-simplejwt = "^5.2.1"
drf-url-filters = "^0.5.1"
django-cors-headers = "^4.1.0"
pandas = "^2.0.2"
uniprotparser = "^1.1.0"
drf-flex-fields = "^1.0.2"
drf-spectacular = "^0.26.3"
django-sendfile2 = "^0.7.0"
psycopg2 = "^2.9.6"
gunicorn = "^20.1.0"
django-allauth = "^0.54.0"
google-api-python-client = "^2.90.0"
google = "^3.0.0"
django-rest-auth = "^0.9.5"
dj-rest-auth = "^4.0.1"
django-dbbackup = "^4.0.2"
django-q = "^1.3.9"
django-request = "^1.6.2"
statsmodels = "^0.14.0"
daphne = "^4.0.0"
channels = "^4.0.0"

[tool.poetry.dev-dependencies]
factory-boy = "^3.2.1"
faker-biology = "^0.6.0"
faker-web = "^0.3.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

